--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="loading">
-      <img class="loadingImage" src="./assets/loader.svg" alt="Loading" width="64" height="64" />
+      <img class="loadingImage" src="%PUBLIC_URL%/assets/loader.svg" alt="Loading" width="64" height="64" />
     </div>
   </div>
 </body>
